--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Merriweather:300&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Montserrat:700:300&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Merriweather:300&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:700:300&display=swap");
 // colors
 $main-color: #7dd86e;
 $main-color-selected: #49873f;
@@ -11,6 +11,6 @@ $secondary-text-color: #111010;
 $warning-text-color: #d2222d;
 $info-text-color: #939292;
 
-$main-font: 'Montserrat', sans-serif;
-$secondary-font: 'Merriweather', serif;
+$main-font: "Montserrat", sans-serif;
+$secondary-font: "Merriweather", serif;
 $font-weight-light: 300;
